--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "xdevs"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Román Cárdenas <rcardenas.rod@gmail.com>"]
 edition = "2021"
 description = "An open source DEVS M&S framework."
 readme = "README.md"
-repository = "https://github.com/iscar-ucm/xdevs-rs"
+repository = "https://github.com/iscar-ucm/xdevs.rs"
 license = "LGPL-3.0-or-later"
 keywords = ["DEVS", "modeling", "simulation"]
 categories = ["simulation"]
