--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ categories = ["simulation"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[profile.release]
+lto = true
+panic = "unwind"
