--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/target/debug/foo.exe",
+            "program": "${workspaceRoot}/target/debug/examples/devstone.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
@@ -16,7 +16,7 @@
             "name": "(OSX) Launch",
             "type": "lldb",
             "request": "launch",
-            "program": "${workspaceRoot}/target/debug/xdevs",
+            "program": "${workspaceRoot}/target/debug/examples/devstone",
             "args": ["HO", "400", "400"],
             "cwd": "${workspaceRoot}",
         }
