--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ rayon = { version = "1.6", optional = true }
 cpu-time = { version = "1.0", optional = true }
 
 [features]
-devstone = ["cpu-time"]
+devstone_busy = ["cpu-time"]
 par_any = ["rayon"]
 par_start = ["par_any"]
 par_collection = ["par_any"]
@@ -33,7 +33,6 @@ par_all = ["par_all_no_xxc", "par_xxc"]
 
 [[example]]
 name = "devstone"
-required-features = ["devstone"]
 
 [[example]]
 name = "gpt_efp"
