--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,10 +19,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
         with:
           profile: minimal
           toolchain: nightly
@@ -30,10 +30,7 @@ jobs:
           components: rustfmt
 
       - name: Run rustfmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check --verbose
+        run: cargo fmt --all -- --check --verbose
 
   clippy:
     name: clippy
@@ -45,10 +42,10 @@ jobs:
           - "--all-features"
     steps:
       - name: Checkout source code
-        uses: actions/checkout@master
-
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: actions/checkout@v3
+        
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
         with:
           profile: minimal
           toolchain: nightly
@@ -56,7 +53,4 @@ jobs:
           components: clippy
 
       - name: Run clippy
-        uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all ${{ matrix.cargo_flags }} -- ${{ env.CLIPPY_PARAMS }}
+        run: cargo clippy --all ${{ matrix.cargo_flags }} -- ${{ env.CLIPPY_PARAMS }}
