--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -43,7 +43,7 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
-        
+
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -53,4 +53,4 @@ jobs:
           components: clippy
 
       - name: Run clippy
-        run: cargo clippy --all ${{ matrix.cargo_flags }} -- ${{ env.CLIPPY_PARAMS }}
+        run: cargo clippy --all ${{ matrix.cargo_flags }} -- -D warnings
