--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,15 +32,9 @@ jobs:
           profile: minimal
           toolchain: ${{ matrix.toolchain }}
           override: true
-
+      
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --all ${{ matrix.cargo_flags }}
+        run: cargo build --all ${{ matrix.cargo_flags }}
 
       - name: Test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all ${{ matrix.cargo_flags }}
+        run: cargo test --all ${{ matrix.cargo_flags }}
