--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,11 @@ devstone_busy = ["cpu-time"]
 par_any = ["rayon"]
 par_start = ["par_any"]
 par_collection = ["par_any"]
-par_eoc = ["par_any"]
-par_xic = ["par_any"]
 par_transition = ["par_any"]
 par_stop = ["par_any"]
-par_xxc = ["par_eoc", "par_xic"]
-par_sim_no_xxc = ["par_collection", "par_transition"]
-par_sim = ["par_sim_no_xxc", "par_xxc"]
-par_all_no_xxc = ["par_start", "par_sim_no_xxc", "par_stop"]
-par_all = ["par_all_no_xxc", "par_xxc"]
+par_all_no_couplings = ["par_start", "par_collection", "par_transition", "par_stop"]
+par_couplings = ["par_any"]
+par_all = ["par_all_no_couplings", "par_couplings"]
 
 [[example]]
 name = "devstone"
