--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "editor.formatOnSave": true
     },
     "rust-analyzer.cargo.features": [
-        "par_all"
+        "par_all",
+        "async_rt",
+        "mqtt",
     ],
 }
