--- a/xdevs_utils/Cargo.toml
+++ b/xdevs_utils/Cargo.toml
@@ -19,10 +19,10 @@ tokio = { version = "1.42", features = ["full"], optional = true }
 tracing = { version = "0.1", optional = true }
 
 [dev-dependencies]
-tracing-subscriber = {version = "0.3", features = ["env-filter"]}
+tracing-subscriber = { version = "0.3" }
 
 [features]
-mqtt = ["xdevs/async_rt", "rumqttc", "tokio", "tracing"]
+mqtt = ["xdevs/rt", "rumqttc", "tokio", "tracing"]
 
 [[bin]]
 name = "mqtt_sniffer"
