--- a/xdevs_utils/Cargo.toml
+++ b/xdevs_utils/Cargo.toml
@@ -13,15 +13,18 @@ categories = ["simulation"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-xdevs = { version = "0.3.0", path = "../xdevs" }
 rumqttc = { version = "0.24", optional = true}
+serde = { version = "1.0", features = ["derive"], optional = true }
+serde_json = { version = "1.0", optional = true }
 tokio = { version = "1.42", features = ["full"], optional = true }
 tracing = { version = "0.1", optional = true }
+xdevs = { version = "0.3.0", path = "../xdevs" }
 
 [dev-dependencies]
 tracing-subscriber = { version = "0.3" }
 
 [features]
+dmt = ["serde", "serde_json"]
 mqtt = ["xdevs/rt", "rumqttc", "tokio", "tracing"]
 
 [[bin]]
